--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@mui/x-data-grid": "5.17.9",
     "@popperjs/core": "2.11.6",
     "@reduxjs/toolkit": "1.8.6",
+    "@types/react-csv": "^1.1.10",
     "apexcharts-clevision": "3.28.5",
     "axios": "1.1.3",
     "axios-mock-adapter": "1.21.2",
@@ -55,6 +56,7 @@
     "react-apexcharts": "1.4.0",
     "react-chartjs-2": "4.3.1",
     "react-credit-cards": "0.8.3",
+    "react-csv": "^2.2.2",
     "react-datepicker": "4.8.0",
     "react-dom": "18.2.0",
     "react-draft-wysiwyg": "1.15.0",
