--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "react-draft-wysiwyg": "1.15.0",
     "react-dropzone": "14.2.3",
     "react-hook-form": "^7.49.3",
-    "react-hot-toast": "2.4.0",
+    "react-hot-toast": "^2.4.1",
     "react-i18next": "12.0.0",
     "react-perfect-scrollbar": "1.5.8",
     "react-popper": "2.3.0",
