--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "materio-mui-react-nextjs-admin-template",
+  "name": "arganier",
   "version": "2.0.0",
   "private": true,
   "extensionKind": [
